# planai-demo

./: .gitignore  LICENSE  README.md  planA_scrapper.py  planA_scrapper_danswer.py  planA_streamlit.py  plana_website_content.jsonl  pyproject.toml  temp
.devcontainer/: devcontainer.json
.streamlit/: config.toml
rag_engine/: canopy_query.py
