[tool.poetry]
name = "chatplana"
version = "0.1.0"
description = ""
authors = ["fmarsault <felix.marsault@plana.earth>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
pypdf = "^3.17.0"
playwright = "^1.39.0"
oauthlib = "^3.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
