[tool.poetry]
name = "PlanAI"
version = "0.1.0"
description = ""
authors = ["fmarsault <felix.marsault@plana.earth>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.28.2"
canopy-sdk = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
